# Subproject_Template

./: .clang-format  .gitmodules  CMakeLists.txt  PROJECT_SETUP.md
CMake/: InstallDirs.cmake
doc/: CMakeLists.txt
include/test/: rectangle.h
include/test/impl/: api_defs.h  import_export_defs.h  import_export_undefs.h  symbol_api_defs.h
src/: rectangle.cpp
templates/: api_defs.h  api_undefs.h
